# goldlapel-django

./: README.md  pyproject.toml
src/django_goldlapel/: base.py
src/django_goldlapel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backend.py
